Preventing MLH logo from overlapping Progress Logo copyright symbol

--- a/src/components/Sponsors/index.scss
+++ b/src/components/Sponsors/index.scss
@@ -50,7 +50,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 85vw;
+        width: 80vw;
     }
 
     &__row {
